chore: move Dockerfile to /src
I can't keep it at the root because I'll need another for mocha tests.

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,11 @@
 !/.gitattributes
 !/.gitignore
 !/.github
-!/Dockerfile
+!/.npmrc
+!/package.json
+!/docker-compose.yml
+!/src
+!/test
 
 # But make sure to ignore these regardless:
 *.lnk
