--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,14 +1,11 @@
 FROM ubuntu:20.04
 
-# https://packages.ubuntu.com/focal/nginx
-RUN apt-get update
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends nginx=1.18.0-0ubuntu1
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+ENV DEBIAN_FRONTEND noninteractive
+RUN apt-get update && apt-get install -y --no-install-recommends nginx=1.18.0-0ubuntu1 openssl=1.1.1f-1ubuntu2.3 ca-certificates=20210119~20.04.1 && apt-get clean
 
-RUN sed -i 's/default_type application\/octet-stream/default_type text\/plain/' /etc/nginx/nginx.conf
-RUN ln -sf /dev/stdout /var/log/nginx/access.log
-RUN ln -sf /dev/stderr /var/log/nginx/error.log
+COPY nginx.conf /etc/nginx/nginx.conf
+RUN rm /etc/nginx/sites-enabled/default && rm /etc/nginx/sites-available/default && ln -sf /dev/stdout /var/log/nginx/access.log && ln -sf /dev/stderr /var/log/nginx/error.log
+
 EXPOSE 80
-
 STOPSIGNAL SIGTERM
 CMD ["nginx", "-g", "daemon off;"]
