chore: move `DEBIAN_FRONTEND` to ARG

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:20.04
 
-ENV DEBIAN_FRONTEND noninteractive
+ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get install -y --no-install-recommends nginx=1.18.0-0ubuntu1 openssl=1.1.1f-1ubuntu2.3 ca-certificates=20210119~20.04.1 && apt-get clean
 
 COPY nginx.conf /etc/nginx/nginx.conf
