--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,7 +1,6 @@
 FROM ubuntu:20.04
 
-ARG DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install -y --no-install-recommends nginx=1.18.0-0ubuntu1 openssl=1.1.1f-1ubuntu2.3 ca-certificates=20210119~20.04.1 && apt-get clean
+RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get install -y --no-install-recommends nginx=1.18.0-0ubuntu1 openssl=1.1.1f-1ubuntu2.3 ca-certificates=20210119~20.04.1 && apt-get clean
 
 COPY nginx.conf /etc/nginx/nginx.conf
 RUN rm /etc/nginx/sites-enabled/default && rm /etc/nginx/sites-available/default && ln -sf /dev/stdout /var/log/nginx/access.log && ln -sf /dev/stderr /var/log/nginx/error.log
