--- a/.github/workflows/upgradable.yml
+++ b/.github/workflows/upgradable.yml
@@ -9,6 +9,6 @@ jobs:
     - uses: actions/checkout@v1
     - run: docker-compose build src
     - run: docker-compose up -d src
-    - run: docker-compose exec src apt list --upgradable
+    - run: docker-compose exec -T src apt list --upgradable
     - run: docker-compose down --volumes
       if: always()
