--- a/.gitattributes
+++ b/.gitattributes
@@ -1,14 +1,14 @@
 * -text
 
-.editorconfig   text
-.gitattributes  text
-.gitignore      text
-*.md            text
-*.yml           text
+.editorconfig   text eol=lf
+.gitattributes  text eol=lf
+.gitignore      text eol=lf
+*.md            text eol=lf
+*.yml           text eol=lf
 
-Dockerfile      text
-*.conf          text
+Dockerfile      text eol=lf
+*.conf          text eol=lf
 
-*.html          text
-*.js            text
-*.css           text
+*.html          text eol=lf
+*.js            text eol=lf
+*.css           text eol=lf
