--- a/.gitattributes
+++ b/.gitattributes
@@ -11,8 +11,9 @@ LICENSE         text eol=lf
 *.yml           text eol=lf
 
 Dockerfile      text eol=lf
-*.conf          text eol=lf
+.env           text eol=lf
 *.env           text eol=lf
+*.conf          text eol=lf
 *.sh            text eol=lf
 *.php           text eol=lf
 *.xml           text eol=lf
@@ -26,3 +27,6 @@ Dockerfile      text eol=lf
 *.map           text eol=lf
 *.html          text eol=lf
 *.svg           text eol=lf
+
+*.wrl           text eol=lf
+*.x3d           text eol=lf
