--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v2.3.4
     - run: docker-compose build src
     - run: docker-compose up -d
-    - run: docker-compose exec -T test npm install --prefer-offline --no-audit --no-fund
+    - run: docker-compose exec -T test npm install --prefer-offline --no-audit --no-fund --no-update-notifier
     - run: docker-compose exec -T test npm run test
     - run: docker-compose down --volumes
       if: always()
