--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@ services:
 
   src:
     build: ./src
-    depends_on:
-      - test
     volumes:
     - logs:/shared
     - ./test/nginx/.htpasswd:/etc/nginx/sites-enabled/.htpasswd:ro
@@ -34,6 +32,8 @@ services:
         - www.rewrite.local
 
   test:
+    depends_on:
+    - src
     image: node:16-alpine
     command: tail -f /dev/null
     working_dir: /app
