--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,10 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
 
+[dependencies.json]
+indent_style = space
+indent_size = 4
+
 [*.yml]
 indent_style = space
 indent_size = 2
