--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,8 @@ jobs:
     timeout-minutes: 10
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2.3.4
+    - name: Checkout
+      uses: actions/checkout@v2.3.4
 
     - name: Initialize deployment
       id: deployment
