--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
       working-directory: ./docker
       run: |
         echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
-        docker build . --tag ${{ secrets.DOCKER_IMAGE }}:${{ steps.deployment.outputs.tag }}
+        docker build . --tag ghcr.io/${{ secrets.DOCKER_IMAGE }}:${{ steps.deployment.outputs.tag }}
         docker push ghcr.io/${{ secrets.DOCKER_IMAGE }}:${{ steps.deployment.outputs.tag }}
 
     - name: On success
