--- a/.gitattributes
+++ b/.gitattributes
@@ -22,6 +22,7 @@ Dockerfile      text eol=lf
 *.scss          text eol=lf
 *.js            text eol=lf
 *.jsx           text eol=lf
+*.mjs           text eol=lf
 *.ts            text eol=lf
 *.tsx           text eol=lf
 *.map           text eol=lf
