--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,15 +16,13 @@ jobs:
       uses: actions/checkout@v2.4.0
 
     - name: Build
-      run: |
-        docker-compose build src
-        docker-compose up -d
+      run: docker-compose up -f docker-compose.test.yml -d --build
 
     - name: Test
       run: |
-        docker-compose exec -T test npm install --prefer-offline --no-audit --no-fund --no-update-notifier
-        docker-compose exec -T test npm run test
+        docker-compose exec -f docker-compose.test.yml -T test npm install --prefer-offline --no-audit --no-fund --no-update-notifier
+        docker-compose exec -f docker-compose.test.yml -T test npm run test
 
     - name: Cleanup
-      run: docker-compose down --volumes
+      run: docker-compose down -f docker-compose.test.yml --volumes
       if: always()
