chore: re-split build and up steps

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,9 @@ jobs:
       uses: actions/checkout@v2.4.0
 
     - name: Build
-      run: docker-compose up -f docker-compose.test.yml -d --build
+      run: |
+        docker-compose build src -f docker-compose.test.yml
+        docker-compose up -f docker-compose.test.yml -d
 
     - name: Test
       run: |
