--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,9 +16,7 @@ jobs:
       uses: actions/checkout@v2.4.0
 
     - name: Build
-      run: |
-        docker-compose -f docker-compose.test.yml build src
-        docker-compose -f docker-compose.test.yml up -d
+      run: docker-compose -f docker-compose.test.yml up -d --build
 
     - name: Test
       run: |
